Grid Sizes Reordered for train and predict and Paper Updated
I'm thinking in putting a config.{py|json} to avoid the problem of
generate them in the wrong order.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 **/__pycache__/
 data/
-tfrecords/
-weights/
-measures/
+**/*.h5
+src/*
 tags
-scripts/
 UNet_informe/
 manuals/*
 paper/*
 !manuals/*.pdf
 !paper/*.tex
 !paper/*.pdf
+!src/**/*.py
 references/
